# MCXRInput

./: .gitignore  AGENTS.md  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
bridge/: gui_bridge.py  simulate_bridge.py
bridge/native/: CMakeLists.txt
bridge/native/include/mcxrinput/: bridge_options.hpp  bridge_output.hpp  display_control.hpp  half_sbs_renderer.hpp  immersive_projection.hpp  openxr_d3d11.hpp  projection_math.hpp  screen_pose_math.hpp  window_capture.hpp
bridge/native/src/: bridge_options.cpp  bridge_output.cpp  capture_probe.cpp  capture_screen_probe.cpp  d3d11_input_probe.cpp  display_control.cpp  half_sbs_renderer.cpp  immersive_capture_probe.cpp  immersive_projection.cpp  main.cpp  openxr_bridge.cpp  openxr_d3d11.cpp  pose_probe.cpp  projection_math.cpp  screen_pose_math.cpp  stereo_screen_probe.cpp  window_capture.cpp
bridge/native/tests/: bridge_options_tests.cpp  bridge_output_tests.cpp  display_control_tests.cpp  immersive_projection_tests.cpp  projection_math_tests.cpp  screen_pose_math_tests.cpp  window_capture_tests.cpp
bridge/reshade/: MCXRInput-SuperDepth3D-150-040.ini  README.md
docs/: bridge-protocol.md
src/client/java/dev/mcxrinput/client/: ImmersivePresentationController.java  MCXRInputBindingsScreen.java  MCXRInputClient.java  MCXRInputConfig.java  MCXRInputConfigScreen.java  MCXRInputHudConfigScreen.java  MCXRInputModMenuApi.java  TrackedArmModelParts.java  TrackedAvatarRenderer.java  TrackedBodyModelParts.java  TrackedHandMarkerRenderer.java  UtilityWheelScreen.java  VrCameraController.java  VrControllerInputController.java  VrHudSafeArea.java  VrInventoryInputController.java  VrMenuInputController.java  VrUdpReceiver.java  VrUtilityWheelController.java
src/client/java/dev/mcxrinput/mixin/client/: AbstractContainerScreenAccessor.java  CameraFovMixin.java  CreativeModeInventoryScreenAccessor.java  GameRendererMixin.java  HudContextualBarMixin.java  MouseHandlerAccessor.java
src/client/resources/: mcxrinput.client.mixins.json
src/client/resources/assets/mcxrinput/lang/: en_us.json
src/main/java/dev/mcxrinput/avatar/: AvatarBodyLayout.java  AvatarLegSwing.java  AvatarViewTransform.java  TwoBoneIkSolver.java
src/main/java/dev/mcxrinput/hud/: BottomCenterHudTransform.java  HotbarSafeAreaTransform.java  HudSafeAreaOffsets.java  HudSafeAreaSettings.java
src/main/java/dev/mcxrinput/input/: AnalogButtonLatch.java  AnalogButtonPress.java  ControllerButton.java  ControllerStick.java  GameplayKeyOwnership.java  HmdCameraDeltaTracker.java  MovementStickGate.java  SlotNavigation.java  StickDpadGesture.java  StickDpadRepeater.java  UtilityWheelSelection.java
src/main/java/dev/mcxrinput/presentation/: PresentationCalibration.java  PresentationCalibrationTracker.java  PresentationEndpointPolicy.java  PresentationOffer.java  PresentationOfferTracker.java  PresentationProtocol.java  PresentationState.java  PresentationStateSequencer.java
src/main/java/dev/mcxrinput/protocol/: BridgeInputParser.java  BridgeProtocolPolicy.java  HeadOrientation.java  PoseMath.java  VrControllerState.java  VrInputFrame.java  VrPose.java  VrTrackedPose.java
src/main/resources/: fabric.mod.json
src/test/java/dev/mcxrinput/: ArchitectureSafetyTest.java
src/test/java/dev/mcxrinput/avatar/: AvatarBodyLayoutTest.java  AvatarLegSwingTest.java  AvatarViewTransformTest.java  TwoBoneIkSolverTest.java
src/test/java/dev/mcxrinput/hud/: BottomCenterHudTransformTest.java  HotbarSafeAreaTransformTest.java  HudSafeAreaOffsetsTest.java  HudSafeAreaSettingsTest.java
src/test/java/dev/mcxrinput/input/: AnalogButtonLatchTest.java  AnalogButtonPressTest.java  ControllerButtonTest.java  GameplayKeyOwnershipTest.java  HmdCameraDeltaTrackerTest.java  MovementStickGateTest.java  SlotNavigationTest.java  StickDpadGestureTest.java  StickDpadRepeaterTest.java  UtilityWheelSelectionTest.java
src/test/java/dev/mcxrinput/presentation/: PresentationCalibrationTrackerTest.java  PresentationEndpointPolicyTest.java  PresentationOfferTrackerTest.java  PresentationProtocolTest.java  PresentationStateTest.java
src/test/java/dev/mcxrinput/protocol/: BridgeInputParserTest.java  BridgeProtocolPolicyTest.java  PoseMathTest.java
